# Parking-Space-Counter

./: .gitignore  CMakeLists.txt  parking_space_picker.py
data/: CarParkPos.txt
src/: main.cpp
